<resources>
	<string name="app_name">LearnMultiMedia</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_audio_record_play">AudioRecordPlayActivity</string>
	<string name="title_activity_draw_image2">DrawImageActivity</string>
	<string name="audio_start_record">StartRecord</string>
	<string name="audio_stop_record">StopRecord</string>
	<string name="audio_start_play">StartPlay</string>
	<string name="audio_stop_play">StopPlay</string>
	<string name="title_activity_video_record">VideoRecordActivity</string>
	<string name="picture">Picture</string>
	<string name="description_info">Info</string>
	<string name="request_permission">This sample needs camera permission.</string>
	<string name="camera_error">This device doesn\'t support Camera2 API.</string>
	<string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
	<string name="title_activity_oval">OvalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	
	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	
	<string-array name="source_array">
		<item>testfile.mp4</item>
	</string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages(to remove)</string>
    <string name="settings_key_preview">Preview</string>
	<string name="settings_key_enable_grid_line">Grid Line</string>
	<string name="settings_key_grid_line_option">Grid Line Option</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

	<string name="settings_key_photo_zsl">enableZsl</string>

</resources>
